objects/FSL_Time_Entries_Audit__c.object
<CustomObject>
    <description>FSL Time Entries Audit trail</description>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <description>Text field to capture changes from Timesheet on Audit records.</description>
        <label>Change Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Name__c</fullName>
        <label>Changed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_WWID_txt__c</fullName>
        <label>Changed By WWID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FSL_Time_Entries_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Changed__c</fullName>
        <label>Field Changed</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Name_txt__c</fullName>
        <description>For List View Search</description>
        <label>Resource Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Timesheet__r.Service_Order__c ,  Timesheet__r.Service_Order__r.WorkOrderNumber, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>FSL_Timesheet__c</referenceTo>
        <relationshipLabel>FSL Time Entries Audits</relationshipLabel>
        <relationshipName>FSL_Time_Entries_Audits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>FSL Time Entries Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Changed_By_WWID_txt__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Resource_Name_txt__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Timesheet__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>Changed_By_WWID_txt__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Resource_Name_txt__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Timesheet__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Week</fullName>
        <columns>Changed_By_WWID_txt__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Resource_Name_txt__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Timesheet__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>Changed_By_WWID_txt__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Resource_Name_txt__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Timesheet__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Yesterday</fullName>
        <columns>Changed_By_WWID_txt__c</columns>
        <columns>Start_Time__c</columns>
        <columns>Field_Changed__c</columns>
        <columns>Old_Value__c</columns>
        <columns>New_Value__c</columns>
        <columns>Resource_Name_txt__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Service_Order__c</columns>
        <columns>Timesheet__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Yesterday</label>
        <sharedTo>
            <group>FSL_Advanced_Users_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TEA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL Time Entries Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>